--- a/project.html
+++ b/project.html
@@ -44,12 +44,12 @@
         <div class="box-1">
           <div class="margin">
             <div class="logo-text-button">
-              <img src="images/Vision-logo.png" alt="project-name" class="project-name">
+              <img src="images/Vision-logo.png" alt="" class="project-name">
               <p>A cloud storage application with administrative features that help users create, connect, and collaborate in real time.</p>
               <a href="https://www.figma.com/file/n1bV65dnbhnE3hULdYOR1z/Vision--Desktop-Hi-Fi-Final" class="button proto-button" target="_blank">VIEW PROTOTYPE</a>
             </div>
             <div class="proto-image">
-              <img src="images/desktop-proto.png" alt="images/desktop-proto.png" class="center" id="desktop-proto">
+              <img src="images/desktop-proto.png" alt="images/desktop-proto.png" class="center desktop-proto">
             </div>
           </div>
         </div>
@@ -112,12 +112,12 @@
                     </p>
                     <div class="research">
                       <div class="graph">
-                        <img src="images/ux-graph.png" alt="" class="center" id="eighty-vw">
+                        <img src="images/ux-graph.png" alt="" class="center eighty-vw">
                         <p>What people use their cloud storage for most
                         </p>
                       </div>
                       <div class="chart">
-                        <img src="images/ux-chart.png" alt="" class="center" id="shrink">
+                        <img src="images/ux-chart.png" alt="" class="center shrink">
                         <p>51% percent of of participants might use a cloud storage app to create a vision, 18.9% said they would use it.
                         </p>
                       </div>
@@ -140,10 +140,10 @@
                     <p>Based on the user survey data, interviews, and Competitive Analysis, I created three personas - A Student, a Researcher, and a Salesman
                     </p>
                     <div class="personas">
-                      <img src="images/Laura.png" alt="" class="center laura" id="eighty-vw">
-                      <img src="images/Jess.png" alt="" class="center jess" id="eighty-vw">
-                      <img src="images/Alex.png" alt=""class="center alex" id="eighty-vw">
-                  </div>
+                      <img src="images/Laura.png" alt="" class="center laura eighty-vw">
+                      <img src="images/Jess.png" alt="" class="center jess eighty-vw">
+                      <img src="images/Alex.png" alt=""class="center alex eighty-vw">
+                    </div>
                   <a href="https://www.figma.com/file/GL8xgxU5IN73SQDPRn3fOK/Cloud-Storage-User-Personas?node-id=0%3A1" class="button" target="_blank">VIEW USER PERSONAS</a>
                 </article>
               </div>
@@ -158,7 +158,7 @@
                   <p>Derived from the goals and frustrations,
                     I created User Stories that show the users potential tasks.
                   </p>
-                  <img src="images/user-stories.png" alt="" class="center" id="eighty-vw">
+                  <img src="images/user-stories.png" alt="" class="center eighty-vw">
               </aritcle>
               <article>
                 <h3>User Flows</h3>
@@ -166,12 +166,12 @@
                   </p>
                   <div class="flows">
                     <div class="flows-1">
-                      <img class="flow-one" src="images/onboarding-flow.png" alt="" class="center" id="eighty-vw">
-                      <img class="flow-one" src="images/create-flow.png" alt="" class="center" id="eighty-vw">
+                      <img src="images/onboarding-flow.png" alt="" class="center eighty-vw">
+                      <img src="images/create-flow.png" alt="" class="center eighty-vw">
                     </div>
                     <div class="flows-2">
-                      <img class="flow-two" src="images/share-flow.png" alt="" class="center" id="eighty-vw">
-                      <img class="flow-two" src="images/move-flow.png" alt="" class="center" id="eighty-vw">
+                      <img src="images/share-flow.png" alt="" class="center eighty-vw">
+                      <img src="images/move-flow.png" alt="" class="center eighty-vw">
                     </div>
                   </div>
                 <a href="https://drive.google.com/file/d/1urYbhNmpVWsgXFYFD8tg4A-jwrxGuQjf/view?usp=sharing" class="button" target="_blank">VIEW USER FLOWS</a>
@@ -183,8 +183,8 @@
                     changed the calendar to a vertical scroll that moves with real-time.
                   </p>
                   <div class="wireframes">
-                    <img class="wire-sketch" src="images/homepage-sketch.png" alt="" class="center" id="eighty-vw">
-                    <img class="lo-fi" src="images/homepage-wireframe.png" alt="" class="center" id="eighty-vw">
+                    <img src="images/homepage-sketch.png" alt="" class="center eighty-vw">
+                    <img src="images/homepage-wireframe.png" alt="" class="center eighty-vw">
                   </div>
                 <a href="https://drive.google.com/file/d/1Bthdczz4e7Mm20xKwkgYWds5Stfjxwuo/view?usp=sharing" class="button" target="_blank">VIEW WIREFRAME SKETCHES</a>
                 <a href="https://www.figma.com/file/o4keCE9UXIxdsFIetV3xQX/Cloud-Storage-Prototype?node-id=0%3A1" class="button" target="_blank">VIEW WIREFRAMES</a>
@@ -194,7 +194,7 @@
                     by creating a CTA button on the homepage. I continued to conduct additional testing quickly by creating a paper prototype to conduct preference testing. The findings were that users would like to see a To-Do section on their homepage
                     higher in the hierarchy.
                   </p>
-                  <img src="images/user-testing-sketches.png" alt="" class="center" id="eighty-vw">
+                  <img src="images/user-testing-sketches.png" alt="" class="center eighty-vw">
               </article>
             </div>
         </section>
@@ -206,15 +206,15 @@
                     <h3>Research and Sketching</h3>
                       <p>In order to decide on a brand name, I created a mind map based on our user personas and words that arose when talking about cloud storage.
                       </p>
-                      <img src="images/mindmap.png" alt="" class="center" id="eighty-vw">
-                      <img src="images/list-making.png" alt="" class="center" id="eighty-vw">
+                      <img src="images/mindmap.png" alt="" class="center eighty-vw">
+                      <img src="images/list-making.png" alt="" class="center eighty-vw">
                       <p>Our product helps turn dreams and ideas into a reality by having everything you need in one place. From our mind mapping experience, I decided on the brand name: Vision, and created a list of words that come to mind when thinking
                         about vision.</p>
 
                       <p>Vision incorporates our product's mission of aligning with your vision or goal, with the added opportunity to create vision boards. I knew I wanted the V in Vision to be part of the logo and for users to feel a sense of clarity and
                         a clear path to reach their destination.
                       </p>
-                      <img src="images/vision-sketches.png" alt="" class="center" id="eighty-vw">
+                      <img src="images/vision-sketches.png" alt="" class="center eighty-vw">
                   </article>
                   <article>
                     <h3>Refining</h3>
@@ -228,10 +228,10 @@
                     <h3>Style Guide</h3>
                       <p class="change-font">Logos
                       </p>
-                      <img src="images/main-logo.png" alt="" class="center" id="main-logo">
-                      <img src="images/vision-type-logo.png" alt="" class="center" id="eighty-vw">
+                      <img src="images/main-logo.png" alt="" class="center main-logo">
+                      <img src="images/vision-type-logo.png" alt="" class="center eighty-vw">
                       <p class="change-font">Color Palette</p>
-                      <img src="images/color-palette.png" alt="" class="center" id="eighty-vw">
+                      <img src="images/color-palette.png" alt="" class="center eighty-vw">
                       <p class="change-font">Typeface</p>
                       <ul class="typeface">
                         <li>H1 - Muli Bold 36 pts</li>
@@ -257,11 +257,11 @@
                   <h3>Hi-Fidelity Prototype</h3>
                     <p> With the style guide created, I built out the first high fidelity desktop and mobile prototype and conducted preference tests to ensure positive design decisions. It was important to make sure that both mobile and desktop designs
                       remained cohesive.</p>
-                    <img src="images/usability-test-1.png" alt="" class="center" id="eighty-vw">
+                    <img src="images/usability-test-1.png" alt="" class="center eighty-vw">
                       <p> 52% of users chose swiping to view each section.</p>
-                    <img src="images/usability-test-2.png" alt="" class="center" id="eighty-vw">
+                    <img src="images/usability-test-2.png" alt="" class="center eighty-vw">
                       <p> 52% of users chose the blue sections over dividers.</p>
-                    <img src="images/first-hifi.png" alt="" class="center" id="eighty-vw">
+                    <img src="images/first-hifi.png" alt="" class="center eighty-vw">
                     <p>From the preference test for the Quick Access and Drive layouts, I learned that half the users chose the horizontal swiping to view each section over clicking the carrot to change, and then vertical scrolling. From this I decided to
                       try a new approach that allowed users to easily change without excessive scrolling.
 
@@ -275,10 +275,10 @@
                       could view both their agenda and monthly calendar on their homepage. The Agenda went back to a vertical scroll which the tick would move in real-time. The side navigation bar is collapsible, and it is on every page throughout the
                       prototype. Instead of having an upload button, there is a create icon where a pop out occurs with the options to create a document, spreadsheet, presentation, vision board, upload, and folder.
                     </p>
-                    <img src="images/desktop-1.png" alt="" class="center" id="desktop">
-                    <img src="images/desktop-2.png" alt="" class="center" id="desktop">
-                    <img src="images/mobile-1.png" alt="" class="center" id="mobile-proto">
-                    <img src="images/mobile-2.png" alt="" class="center" id="mobile-proto">
+                    <img src="images/desktop-1.png" alt="" class="center desktop">
+                    <img src="images/desktop-2.png" alt="" class="center desktop">
+                    <img src="images/mobile-1.png" alt="" class="center mobile-proto">
+                    <img src="images/mobile-2.png" alt="" class="center mobile-proto">
                 </article>
                 <article>
                   <h3>Conclusion + Takeaways</h3>
