--- a/index.html
+++ b/index.html
@@ -46,12 +46,14 @@
           </ul>
             <p class="intro">Driven by research and human connection, I solve problems by addressing user needs and designing for a better future.</p>
           <section>
-            <img src="images/desktop-proto.png" alt="images/desktop-proto.png" class="center" id="desktop-proto">
-            <h6 class="left">User Experience Design</h6>
-            <h5 class="left">Vision</h5>
-              <p>A cloud storage application with administrative feature that help users create, connect, and collaborate in real time.</p>
-            <div class="view-casestudy">
-              <a href="project.html" class="button">VIEW CASE STUDY</a>
+            <div class="vision-case-container">
+              <img src="images/desktop-proto.png" alt="images/desktop-proto.png" class="center desktop-proto">
+              <h6 class="left">User Experience Design</h6>
+              <h5 class="left">Vision</h5>
+                <p>A cloud storage application with administrative feature that help users create, connect, and collaborate in real time.</p>
+              <div class="view-casestudy">
+                <a href="project.html" class="button">VIEW CASE STUDY</a>
+              </div>
             </div>
           </section>
         </div>
