--- a/project.html
+++ b/project.html
@@ -162,7 +162,7 @@
               </aritcle>
               <article>
                 <h3>User Flows</h3>
-                  <p>From the stories, I sketched out each individual flow to begin to create the content strategy.
+                  <p class="text-center">From the stories, I sketched out each individual flow to begin to create the content strategy.
                   </p>
                   <div class="flows">
                     <div class="flows-1">
@@ -183,8 +183,8 @@
                     changed the calendar to a vertical scroll that moves with real-time.
                   </p>
                   <div class="wireframes">
-                    <img src="images/homepage-sketch.png" alt="" class="center eighty-vw">
-                    <img src="images/homepage-wireframe.png" alt="" class="center eighty-vw">
+                    <img src="images/homepage-sketch.png" alt="" class=" wire-sketch center eighty-vw">
+                    <img src="images/homepage-wireframe.png" alt="" class="lo-fi  center eighty-vw">
                   </div>
                 <a href="https://drive.google.com/file/d/1Bthdczz4e7Mm20xKwkgYWds5Stfjxwuo/view?usp=sharing" class="button" target="_blank">VIEW WIREFRAME SKETCHES</a>
                 <a href="https://www.figma.com/file/o4keCE9UXIxdsFIetV3xQX/Cloud-Storage-Prototype?node-id=0%3A1" class="button" target="_blank">VIEW WIREFRAMES</a>
