--- a/project.html
+++ b/project.html
@@ -184,7 +184,7 @@
                   </p>
                   <div class="wireframes">
                     <img src="images/homepage-sketch.png" alt="" class=" wire-sketch center eighty-vw">
-                    <img src="images/homepage-wireframe.png" alt="" class="lo-fi  center eighty-vw">
+                    <img src="images/homepage-wireframe.png" alt="" class="center eighty-vw">
                   </div>
                 <a href="https://drive.google.com/file/d/1Bthdczz4e7Mm20xKwkgYWds5Stfjxwuo/view?usp=sharing" class="button" target="_blank">VIEW WIREFRAME SKETCHES</a>
                 <a href="https://www.figma.com/file/o4keCE9UXIxdsFIetV3xQX/Cloud-Storage-Prototype?node-id=0%3A1" class="button" target="_blank">VIEW WIREFRAMES</a>
@@ -194,7 +194,7 @@
                     by creating a CTA button on the homepage. I continued to conduct additional testing quickly by creating a paper prototype to conduct preference testing. The findings were that users would like to see a To-Do section on their homepage
                     higher in the hierarchy.
                   </p>
-                  <img src="images/user-testing-sketches.png" alt="" class="center eighty-vw">
+                  <img src="images/user-testing-sketches.png" alt="" class="center eighty-vw user-test">
               </article>
             </div>
         </section>
