--- a/project.html
+++ b/project.html
@@ -125,7 +125,7 @@
                   <a href="https://docs.google.com/document/d/1gnw5JfLjWsi2-l_1J86oFoY_YDmTDkYvC2INiD7Vbvc/edit" class="button" target="_blank">VIEW SURVEY</a>
                 </article>
                 <article>
-                  <h3>Competitve Analysis</h3>
+                  <h3>Competitive Analysis</h3>
                   <div class="competitors">
                       <img src="images/competitors.png" alt="google-drive-logo" class="center" id="competitors">
                   </div>
@@ -155,7 +155,7 @@
             <h1>Information Architecture</h1>
               <article>
                 <h3>User Stories</h3>
-                  <p>Derived from the goals and frustrations,
+                  <p class="text-center">Derived from the goals and frustrations,
                     I created User Stories that show the users potential tasks.
                   </p>
                   <img src="images/user-stories.png" alt="" class="center eighty-vw">
@@ -206,15 +206,17 @@
                     <h3>Research and Sketching</h3>
                       <p>In order to decide on a brand name, I created a mind map based on our user personas and words that arose when talking about cloud storage.
                       </p>
-                      <img src="images/mindmap.png" alt="" class="center eighty-vw">
-                      <img src="images/list-making.png" alt="" class="center eighty-vw">
+                      <div class="map-and-list">
+                        <img src="images/mindmap.png" alt="" class="center map eighty-vw">
+                        <img src="images/list-making.png" alt="" class="center list eighty-vw">
+                      </div>
                       <p>Our product helps turn dreams and ideas into a reality by having everything you need in one place. From our mind mapping experience, I decided on the brand name: Vision, and created a list of words that come to mind when thinking
                         about vision.</p>
 
                       <p>Vision incorporates our product's mission of aligning with your vision or goal, with the added opportunity to create vision boards. I knew I wanted the V in Vision to be part of the logo and for users to feel a sense of clarity and
                         a clear path to reach their destination.
                       </p>
-                      <img src="images/vision-sketches.png" alt="" class="center eighty-vw">
+                      <img src="images/vision-sketches.png" alt="" class="center logo-sketches eighty-vw">
                   </article>
                   <article>
                     <h3>Refining</h3>
@@ -228,10 +230,12 @@
                     <h3>Style Guide</h3>
                       <p class="change-font">Logos
                       </p>
-                      <img src="images/main-logo.png" alt="" class="center main-logo">
-                      <img src="images/vision-type-logo.png" alt="" class="center eighty-vw">
+                      <div class="style-guide-logos">
+                        <img src="images/main-logo.png" alt="" class="center large-logo main-logo">
+                        <img src="images/vision-type-logo.png" alt="" class="center text-logos eighty-vw">
+                      </div>
                       <p class="change-font">Color Palette</p>
-                      <img src="images/color-palette.png" alt="" class="center eighty-vw">
+                      <img src="images/color-palette.png" alt="" class="center palette eighty-vw">
                       <p class="change-font">Typeface</p>
                       <ul class="typeface">
                         <li>H1 - Muli Bold 36 pts</li>
@@ -257,11 +261,17 @@
                   <h3>Hi-Fidelity Prototype</h3>
                     <p> With the style guide created, I built out the first high fidelity desktop and mobile prototype and conducted preference tests to ensure positive design decisions. It was important to make sure that both mobile and desktop designs
                       remained cohesive.</p>
-                    <img src="images/usability-test-1.png" alt="" class="center eighty-vw">
-                      <p> 52% of users chose swiping to view each section.</p>
-                    <img src="images/usability-test-2.png" alt="" class="center eighty-vw">
-                      <p> 52% of users chose the blue sections over dividers.</p>
-                    <img src="images/first-hifi.png" alt="" class="center eighty-vw">
+                      <div class="hi-fi-testing">
+                        <div class="ut-1">
+                          <img src="images/usability-test-1.png" alt="" class="center eighty-vw">
+                            <p> 52% of users chose swiping to view each section.</p>
+                        </div>
+                        <div class="ut-2">
+                          <img src="images/usability-test-2.png" alt="" class="center eighty-vw">
+                            <p> 52% of users chose the blue sections over dividers.</p>
+                        </div>
+                      </div>
+                    <img src="images/first-hifi.png" alt="" class="center first-hifi eighty-vw">
                     <p>From the preference test for the Quick Access and Drive layouts, I learned that half the users chose the horizontal swiping to view each section over clicking the carrot to change, and then vertical scrolling. From this I decided to
                       try a new approach that allowed users to easily change without excessive scrolling.
 
@@ -277,8 +287,10 @@
                     </p>
                     <img src="images/desktop-1.png" alt="" class="center desktop">
                     <img src="images/desktop-2.png" alt="" class="center desktop">
-                    <img src="images/mobile-1.png" alt="" class="center mobile-proto">
-                    <img src="images/mobile-2.png" alt="" class="center mobile-proto">
+                    <div class="final-mobile">
+                      <img src="images/mobile-1.png" alt="" class="center mob-1 mobile-proto">
+                      <img src="images/mobile-2.png" alt="" class="center mob-2 mobile-proto">
+                    </div>
                 </article>
                 <article>
                   <h3>Conclusion + Takeaways</h3>
