--- a/project.html
+++ b/project.html
@@ -54,13 +54,13 @@
           </div>
         </div>
         <div class="accomplished">
-          <ul class="roles"><h2>Design roles</h2>
+          <ul class="roles"><h2 class="how">Design roles</h2>
             <hr>
             <li class="top">UX Research and Design</li>
             <li>Branding and Identity</li>
             <li>Visual Design</li>
           </ul>
-          <ul class="deliverables"><h2>Deliverables</h2>
+          <ul class="deliverables"><h2 class="how">Deliverables</h2>
             <hr>
             <li class="top">User Surveys</li>
             <li>User Interviews</li>
@@ -74,7 +74,7 @@
             <li>A/B Testing</li>
             <li>Visual Design</li>
             </ul>
-          <ul class="tools"><h2>Tools</h2>
+          <ul class="tools"><h2 class="how">Tools</h2>
             <hr>
             <li class="top">Pen/Paper</li>
             <li>Google Suite</li>
@@ -86,17 +86,13 @@
         <section>
           <div class="margin">
             <div class="prob-solution">
-              <h2>The Problem:</h2>
-            </div>
-            <div class="answer">
-              <p>Users were frustrated with juggling multiple apps to manage their day and collaborate with others on projects.
+              <h2 class="prob-sol-header">The Problem:</h2>
+              <p class="answer">Users were frustrated with juggling multiple apps to manage their day and collaborate with others on projects.
               </p>
             </div>
             <div class="prob-solution">
-              <h2>The Solution:</h2>
-            </div>
-            <div class="answer">
-              <p>I created a cloud storage application with administrative features that allows users to save, organize, create, and upload content, while connecting and collaborating in real-time.
+              <h2 class="prob-sol-header">The Solution:</h2>
+              <p class="answer">I created a cloud storage application with administrative features that allows users to save, organize, create, and upload content, while connecting and collaborating in real-time.
               </p>
             </div>
           </div>
