code not working

--- a/project.html
+++ b/project.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="https://use.typekit.net/bub7yri.css">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
-
+    <style>
+      .font {
+        font-family: proxima nova, sans-serif;
+      }
+    </style>
   </head>
 
   <body>
