--- a/project.html
+++ b/project.html
@@ -235,9 +235,9 @@
                         <img src="images/vision-type-logo.png" alt="" class="center text-logos eighty-vw">
                       </div>
                       <p class="change-font">Color Palette</p>
-                      <div class="palette">
+                      <div class="palette"> <!--- Changed to a div --->
                         <img src="images/color-palette.png" alt="" class="center eighty-vw">
-                      </div>  
+                      </div>
                       <p class="change-font">Typeface</p>
                       <ul class="typeface">
                         <li>H1 - Muli Bold 36 pts</li>
