--- a/index.html
+++ b/index.html
@@ -39,12 +39,19 @@
       </header>
     </nav>
         <div class="main-container">
-          <h2 class="hello"> Hi, I'm Alana!</h2>
-          <ul>
-            <li><h3> A Product Designer</h3></li>
-            <li><h3>based in San Francisco</h3></li>
-          </ul>
-            <p class="intro">Driven by research and human connection, I solve problems by addressing user needs and designing for a better future.</p>
+          <div class="intro-with-pic">
+            <div class="homepage-intro">
+              <h2 class="hello"> Hi, I'm Alana!</h2>
+              <ul>
+                <li><h3> A Product Designer</h3></li>
+                <li><h3>based in San Francisco</h3></li>
+              </ul>
+                <p class="intro">Driven by research and human connection, I solve problems by addressing user needs and designing for a better future.</p>
+            </div>
+            <div class="profile-pic">
+              <img src="images/profile.picture.png" alt="" class="prof-pic">
+            </div>
+          </div>
           <section>
             <div class="vision-case-container">
               <img src="images/desktop-proto.png" alt="images/desktop-proto.png" class="center desktop-proto">
