--- a/project.html
+++ b/project.html
@@ -235,9 +235,7 @@
                         <img src="images/vision-type-logo.png" alt="" class="center text-logos eighty-vw">
                       </div>
                       <p class="change-font">Color Palette</p>
-                      <div class="palette"> <!--- Changed to a div --->
-                        <img src="images/color-palette.png" alt="" class="center eighty-vw">
-                      </div>
+                      <img src="images/color-palette.png" alt="" class="center palette eighty-vw">
                       <p class="change-font">Typeface</p>
                       <ul class="typeface">
                         <li>H1 - Muli Bold 36 pts</li>
