--- a/index.html
+++ b/index.html
@@ -54,12 +54,16 @@
           </div>
           <section>
             <div class="vision-case-container">
-              <img src="images/desktop-proto.png" alt="images/desktop-proto.png" class="center desktop-proto">
-              <h6 class="left">User Experience Design</h6>
-              <h5 class="left">Vision</h5>
-                <p>A cloud storage application with administrative feature that help users create, connect, and collaborate in real time.</p>
-              <div class="view-casestudy">
-                <a href="project.html" class="button">VIEW CASE STUDY</a>
+              <div class="vision-case-image">
+                <img src="images/desktop-proto.png" alt="images/desktop-proto.png" class="center desktop-proto">
+              </div>
+              <div class="about-vision-casestudy">
+                <h6 class="left">User Experience Design</h6>
+                <h5 class="left">Vision</h5>
+                  <p>A cloud storage application with administrative feature that help users create, connect, and collaborate in real time.</p>
+                <div class="view-casestudy">
+                  <a href="project.html" class="button">VIEW CASE STUDY</a>
+                </div>  
               </div>
             </div>
           </section>
