--- a/index.html
+++ b/index.html
@@ -39,17 +39,19 @@
       </header>
     </nav>
         <div class="main-container">
-          <div class="intro-with-pic">
-            <div class="homepage-intro">
-              <h2 class="hello"> Hi, I'm Alana!</h2>
-              <ul>
-                <li><h3> A Product Designer</h3></li>
-                <li><h3>based in San Francisco</h3></li>
-              </ul>
-                <p class="intro">Driven by research and human connection, I solve problems by addressing user needs and designing for a better future.</p>
-            </div>
-            <div class="profile-pic">
-              <img src="images/profile.picture.png" alt="" class="prof-pic">
+          <div class="margin">
+            <div class="intro-with-pic">
+              <div class="homepage-intro">
+                <h2 class="hello h-two-desktop"> Hi, I'm Alana!</h2>
+                <ul>
+                  <li><h3 class="h-three-desktop"> A Product Designer</h3></li>
+                  <li><h3 class="h-three-desktop">based in San Francisco.</h3></li>
+                </ul>
+                <p class="font intro">Driven by research and human connection, I solve problems by addressing user needs and designing for a better future.</p>
+              </div>
+              <div class="profile-pic">
+                <img src="images/profile-picture.png" alt="" class="prof-pic">
+              </div>
             </div>
           </div>
           <section>
@@ -58,12 +60,12 @@
                 <img src="images/desktop-proto.png" alt="images/desktop-proto.png" class="center desktop-proto">
               </div>
               <div class="about-vision-casestudy">
-                <h6 class="left">User Experience Design</h6>
-                <h5 class="left">Vision</h5>
+                <h6 class="left UXD">User Experience Design</h6>
+                <h5 class="left line-height">Vision</h5>
                   <p>A cloud storage application with administrative feature that help users create, connect, and collaborate in real time.</p>
                 <div class="view-casestudy">
-                  <a href="project.html" class="button">VIEW CASE STUDY</a>
-                </div>  
+                  <a href="project.html" class="button-view-cs button">VIEW CASE STUDY</a>
+                </div>
               </div>
             </div>
           </section>
