--- a/project.html
+++ b/project.html
@@ -7,11 +7,6 @@
     <link rel="stylesheet" href="https://use.typekit.net/bub7yri.css">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
-    <style>
-      .font {
-        font-family: proxima nova, sans-serif;
-      }
-    </style>
   </head>
 
   <body>
@@ -49,7 +44,7 @@
           <div class="margin">
             <div class="logo-text-button">
               <img src="images/Vision-logo.png" alt="" class="project-name">
-              <p>A cloud storage application with administrative features that help users create, connect, and collaborate in real time.</p>
+              <p class="font">A cloud storage application with administrative features that help users create, connect, and collaborate in real time.</p>
               <a href="https://www.figma.com/file/n1bV65dnbhnE3hULdYOR1z/Vision--Desktop-Hi-Fi-Final" class="button proto-button" target="_blank">VIEW PROTOTYPE</a>
             </div>
             <div class="proto-image">
@@ -113,12 +108,12 @@
                     <div class="research">
                       <div class="graph">
                         <img src="images/ux-graph.png" alt="" class="center eighty-vw">
-                        <p>What people use their cloud storage for most
+                        <p class="text-center">What people use their cloud storage for most
                         </p>
                       </div>
                       <div class="chart">
-                        <img src="images/ux-chart.png" alt="" class="center shrink">
-                        <p>51% percent of of participants might use a cloud storage app to create a vision, 18.9% said they would use it.
+                        <img src="images/ux-chart.png" alt="" class="center eighty-vw shrink">
+                        <p class="text-center">51% percent of of participants might use a cloud storage app to create a vision, 18.9% said they would use it.
                         </p>
                       </div>
                     </div>
@@ -166,11 +161,12 @@
                   </p>
                   <div class="flows">
                     <div class="flows-1">
-                      <img src="images/onboarding-flow.png" alt="" class="center eighty-vw">
+                      <img src="images/onboarding-flow.png" alt="" class="center flow-pad eighty-vw">
                       <img src="images/create-flow.png" alt="" class="center eighty-vw">
                     </div>
                     <div class="flows-2">
-                      <img src="images/share-flow.png" alt="" class="center eighty-vw">
+                      <img src="images/share-flow.png" alt="" class="center flow-pad-2
+                      eighty-vw">
                       <img src="images/move-flow.png" alt="" class="center eighty-vw">
                     </div>
                   </div>
