--- a/contact.html
+++ b/contact.html
@@ -40,30 +40,30 @@
   <div class="contact-section">
     <div class="contact-form">
       <div>
-        <h2> Want to get in touch?</h2>
-        <p>Send me a message below, I would love to hear from you!</p>
+        <h2 class="add-height"> Want to get in touch?</h2>
+        <p class="text-center">Send me a message below, I would love to hear from you!</p>
       </div>
       <!-- CONTACT FORM -->
       <form action="https://formspree.io/xknqvrkg"method="POST" target="_blank">
         <div class="name">
           <label>
-            <ul>
+            <ul class="contact-info">
               <li class="contact">Full Name:</li>
-              <input type="text" name="name">
+              <input class="textbox" type="text" name="name">
             </ul>
           </label>
         </div>
         <div class="email">
           <label>
-            <ul>
+            <ul class="contact-info">
               <li class="contact">Email:</li>
-              <input type="text" name="_replyto">
+              <input class="textbox" type="text" name="_replyto">
             </ul>
           </label>
         </div>
         <div class="message">
           <label>
-            <ul>
+            <ul class="contact-info">
               <li class="contact">Message:</li>
               <textarea name="message"></textarea>
             </ul>
