--- a/project.html
+++ b/project.html
@@ -31,7 +31,7 @@
           <ul>
             <li><a href="index.html">Work</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="resume.html">Resume</a></li>
+            <li><a href="file:///Users/alanamacedo/my-portfolio/Alana-Macedo-Resume.pdf">Resume</a></li>
           </ul>
         </div>
         <header>
@@ -170,8 +170,10 @@
                       <img src="images/move-flow.png" alt="" class="center eighty-vw">
                     </div>
                   </div>
-                <a href="https://drive.google.com/file/d/1urYbhNmpVWsgXFYFD8tg4A-jwrxGuQjf/view?usp=sharing" class="button" target="_blank">VIEW USER FLOWS</a>
-                <a href="https://docs.google.com/document/d/1d2bODiLmxlq3ipJXeJFaJvJ-El9juOQa9AO3gBhaH9A/edit" class="button" target="_blank">VIEW CONTENT STRATEGY</a>
+                <div class="buttons-side-by-side">
+                  <a href="https://drive.google.com/file/d/1urYbhNmpVWsgXFYFD8tg4A-jwrxGuQjf/view?usp=sharing" class="button view-user-flow" target="_blank">VIEW USER FLOWS</a>
+                  <a href="https://docs.google.com/document/d/1d2bODiLmxlq3ipJXeJFaJvJ-El9juOQa9AO3gBhaH9A/edit" class="button view-content-strat" target="_blank">VIEW CONTENT STRATEGY</a>
+                </div>
               </article>
               <article>
                 <h3>Wireframes</h3>
@@ -182,8 +184,10 @@
                     <img src="images/homepage-sketch.png" alt="" class=" wire-sketch center eighty-vw">
                     <img src="images/homepage-wireframe.png" alt="" class="center eighty-vw">
                   </div>
-                <a href="https://drive.google.com/file/d/1Bthdczz4e7Mm20xKwkgYWds5Stfjxwuo/view?usp=sharing" class="button" target="_blank">VIEW WIREFRAME SKETCHES</a>
-                <a href="https://www.figma.com/file/o4keCE9UXIxdsFIetV3xQX/Cloud-Storage-Prototype?node-id=0%3A1" class="button" target="_blank">VIEW WIREFRAMES</a>
+                <div class="buttons-side-by-side">
+                  <a href="https://drive.google.com/file/d/1Bthdczz4e7Mm20xKwkgYWds5Stfjxwuo/view?usp=sharing" class="button view-wire-sketch" target="_blank">VIEW WIREFRAME SKETCHES</a>
+                  <a href="https://www.figma.com/file/o4keCE9UXIxdsFIetV3xQX/Cloud-Storage-Prototype?node-id=0%3A1" class="button view-wire" target="_blank">VIEW WIREFRAMES</a>
+                </div>
                 <h3>Additional Testing</h3>
 
                   <p>Once the digital wireframes were created I conducted usability testing to gain insight on how others view and move through the site. The findings were that it was not intuitive to look in drive for the Upload button. This was solved
@@ -233,18 +237,8 @@
                       <p class="change-font">Color Palette</p>
                       <img src="images/color-palette.png" alt="" class="center palette eighty-vw">
                       <p class="change-font">Typeface</p>
-                      <ul class="typeface">
-                        <li>H1 - Muli Bold 36 pts</li>
-                        <li>Muli ExtraLight 36 pts in template</li>
-                        <li>H2 - Muli Semibold 24 pts</li>
-                        <li>H3 - Muli Semibold 16 pts</li>
-                        <li>H5 - Roboto Regular 14 pts</li>
-                        <li>Body - Muli Regular 14 pts</li>
-                        <li>Pop-ups - Montserrat ExtraLight 24 pts</li>
-                        <li>Montserrat Regular 24 pts when filled in</li>
-                        <li>Buttons - Roboto Black 15 pts</li>
-                        <li>Document Tile - Montserrat Medium 12 pts</li>
-                      </ul>
+                      <img src="images/fonts-used.png" alt="" class="center fonts-used eighty-vw">
+
                     <a href="https://www.figma.com/file/X18tAE0IsbHBZmLsISXD0k/Style-Guide-Final?node-id=0%3A1" class="button" target="_blank">VIEW STYLE GUIDE</a>
                   </article>
                 </div>
