--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
       <ul>
         <li><a href="index.html">Work</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="resume.html">Resume</a></li>
+        <li><a href="file:///Users/alanamacedo/my-portfolio/Alana-Macedo-Resume.pdf">Resume</a></li>
       </ul>
     </div>
     <header>
