--- a/project.html
+++ b/project.html
@@ -182,7 +182,7 @@
                   </p>
                   <div class="wireframes">
                     <img src="images/homepage-sketch.png" alt="" class=" wire-sketch center eighty-vw">
-                    <img src="images/homepage-wireframe.png" alt="" class="center eighty-vw">
+                    <img src="images/homepage-wireframe.png" alt="" class="lo-fi center eighty-vw">
                   </div>
                 <div class="buttons-side-by-side">
                   <a href="https://drive.google.com/file/d/1Bthdczz4e7Mm20xKwkgYWds5Stfjxwuo/view?usp=sharing" class="button view-wire-sketch" target="_blank">VIEW WIREFRAME SKETCHES</a>
