--- a/project.html
+++ b/project.html
@@ -253,11 +253,11 @@
                       remained cohesive.</p>
                       <div class="hi-fi-testing">
                         <div class="ut-1">
-                          <img src="images/usability-test-1.png" alt="" class="center eighty-vw">
+                          <img src="images/usability-test-1.png" alt="" class="center ut eighty-vw">
                             <p> 52% of users chose swiping to view each section.</p>
                         </div>
                         <div class="ut-2">
-                          <img src="images/usability-test-2.png" alt="" class="center eighty-vw">
+                          <img src="images/usability-test-2.png" alt="" class="center ut eighty-vw">
                             <p> 52% of users chose the blue sections over dividers.</p>
                         </div>
                       </div>
