--- a/contact.html
+++ b/contact.html
@@ -7,83 +7,92 @@
   <link rel="stylesheet" href="https://use.typekit.net/bub7yri.css">
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/style.css">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-171911028-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-171911028-1');
+</script>
 </head>
-<body>
-  <nav class="nav-bar">
-    <div class="menu-wrap">
-      <input type="checkbox" class="toggler">
-      <div class="hamburger"><div></div></div>
-      <div class="menu">
-        <div>
+  <body>
+    <nav class="nav-bar">
+      <div class="menu-wrap">
+        <input type="checkbox" class="toggler">
+        <div class="hamburger"><div></div></div>
+        <div class="menu">
           <div>
-            <ul>
-              <li><a href="index.html">Work</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="resume.html">Resume</a></li>
-            </ul>
+            <div>
+              <ul>
+                <li><a href="index.html">Work</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="resume.html">Resume</a></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="desktop-nav">
-      <ul>
-        <li><a href="index.html">Work</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="file:///Users/alanamacedo/my-portfolio/Alana-Macedo-Resume.pdf">Resume</a></li>
-      </ul>
-    </div>
-    <header>
-      <a href="index.html">
-        <img src="images/my-logo.png" alt="images/my-logo.png" class="my-logo"></a>
-    </header>
-  </nav>
-  <div class="contact-section">
-    <div class="contact-form">
-      <div>
-        <h2 class="add-height"> Want to get in touch?</h2>
-        <p class="text-center">Send me a message below, I would love to hear from you!</p>
+      <div class="desktop-nav">
+        <ul>
+          <li><a href="index.html">Work</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="file:///Users/alanamacedo/my-portfolio/Alana-Macedo-Resume.pdf">Resume</a></li>
+        </ul>
       </div>
-      <!-- CONTACT FORM -->
-      <form action="https://formspree.io/xknqvrkg"method="POST" target="_blank">
-        <div class="name">
-          <label>
-            <ul class="contact-info">
-              <li class="contact">Full Name:</li>
-              <input class="textbox" type="text" name="name">
-            </ul>
-          </label>
+      <header>
+        <a href="index.html">
+          <img src="images/my-logo.png" alt="images/my-logo.png" class="my-logo"></a>
+      </header>
+    </nav>
+    <div class="contact-section">
+      <div class="contact-form">
+        <div>
+          <h2 class="add-height"> Want to get in touch?</h2>
+          <p class="text-center">Send me a message below, I would love to hear from you!</p>
         </div>
-        <div class="email">
-          <label>
-            <ul class="contact-info">
-              <li class="contact">Email:</li>
-              <input class="textbox" type="text" name="_replyto">
-            </ul>
-          </label>
-        </div>
-        <div class="message">
-          <label>
-            <ul class="contact-info">
-              <li class="contact">Message:</li>
-              <textarea name="message"></textarea>
-            </ul>
-          </label>
-        </div>
-        <input type="submit" id="button" value="Send Message"</input>
-      </form>
+        <!-- CONTACT FORM -->
+        <form action="https://formspree.io/xknqvrkg"method="POST" target="_blank">
+          <div class="name">
+            <label>
+              <ul class="contact-info">
+                <li class="contact">Full Name:</li>
+                <input class="textbox" type="text" name="name">
+              </ul>
+            </label>
+          </div>
+          <div class="email">
+            <label>
+              <ul class="contact-info">
+                <li class="contact">Email:</li>
+                <input class="textbox" type="text" name="_replyto">
+              </ul>
+            </label>
+          </div>
+          <div class="message">
+            <label>
+              <ul class="contact-info">
+                <li class="contact">Message:</li>
+                <textarea name="message"></textarea>
+              </ul>
+            </label>
+          </div>
+          <input type="submit" id="button" value="Send Message"</input>
+        </form>
+      </div>
     </div>
-  </div>
-  <footer>
-    <h4>Let's connect!</h4>
-    <div class="footer-icons">
-      <a href="https://www.linkedin.com/in/alana-macedo-b3347015b/">
-        <img src="images/linked-in-icon.png" alt="images/linked-in-icon.png" class="social-media" width="width" height="height"></a>
-      <a href="https://www.facebook.com/alana.macedo.16">
-        <img src="images/facebook-icon.png" alt="images/facebook-icon.png" class="social-media" width="width" height="height"></a>
-      <a href="contact.html">
-        <img src="images/email-icon.png" alt="images/email-icon.png" class="social-media" width="width" height="height"></a>
-    </div>
-    <h6 class="copyright">Copyright Alana Macedo 2020</h6>
-  </footer>
-</body>
+    <footer>
+      <h4>Let's connect!</h4>
+      <div class="footer-icons">
+        <a href="https://www.linkedin.com/in/alana-macedo-b3347015b/">
+          <img src="images/linked-in-icon.png" alt="images/linked-in-icon.png" class="social-media" width="width" height="height"></a>
+        <a href="https://www.facebook.com/alana.macedo.16">
+          <img src="images/facebook-icon.png" alt="images/facebook-icon.png" class="social-media" width="width" height="height"></a>
+        <a href="contact.html">
+          <img src="images/email-icon.png" alt="images/email-icon.png" class="social-media" width="width" height="height"></a>
+      </div>
+      <h6 class="copyright">Copyright Alana Macedo 2020</h6>
+    </footer>
+  </body>
 </html>
