--- a/project.html
+++ b/project.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://use.typekit.net/bub7yri.css">
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/style.css">
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://use.typekit.net/bub7yri.css">
+  <link rel="stylesheet" href="styles/reset.css">
+  <link rel="stylesheet" href="styles/style.css">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-171911028-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-171911028-1');
+</script>
+</head>
   <body>
     <div class="full-page-container">
       <nav class="nav-bar">
@@ -257,7 +265,7 @@
                             <p> 52% of users chose swiping to view each section.</p>
                         </div>
                         <div class="ut-2">
-                          <img src="images/usability-test-2.png" alt="" class="center ut eighty-vw">
+                          <img src="images/usability-test-2.png" alt="" class="center uteighty-vw">
                             <p> 52% of users chose the blue sections over dividers.</p>
                         </div>
                       </div>
