--- a/resume.html
+++ b/resume.html
@@ -8,6 +8,15 @@
   <style>
     .container{padding: 30px;}
   </style>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-171911028-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-171911028-1');
+</script>
 </head>
 <body>
   <div class="container">
