--- a/project.html
+++ b/project.html
@@ -27,9 +27,9 @@
             <div>
               <div>
                 <ul>
-                  <li><a href="index.html">Work</a></li>
-                  <li><a href="about.html">About</a></li>
-                  <li><a href="resume.html">Resume</a></li>
+                  <li class="work-about-resume"><a href="index.html">Work</a></li>
+                  <li class="work-about-resume"><a href="about.html">About</a></li>
+                  <li class="work-about-resume"><a href="resume.html">Resume</a></li>
                 </ul>
               </div>
             </div>
