--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </script>
 </head>
   <body>
-    <nav class="nav-bar">
+    <nav>
       <div class="menu-wrap">
         <input type="checkbox" class="toggler">
         <div class="hamburger"><div></div></div>
@@ -28,7 +28,7 @@
               <ul>
                 <li><a href="index.html">Work</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="file:///Users/alanamacedo/my-portfolio/Alana-Macedo-Resume.pdf">Resume</a></li>
+                <li><a target="_blank" href="./Alana-Macedo-Resume.pdf#toolbar=0" onclick="open(this.href, this.target, 'width=600, height=450, top=200, left=250'); return false;">Resume</a></li>
               </ul>
             </div>
           </div>
@@ -38,7 +38,7 @@
         <ul>
           <li><a href="index.html">Work</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="resume.html">Resume</a></li>
+          <li><a href="file:///Users/alanamacedo/my-portfolio/Alana-Macedo-Resume.pdf">Resume</a></li>
         </ul>
       </div>
       <header>
@@ -52,8 +52,8 @@
               <div class="homepage-intro">
                 <h2 class="hello h-two-desktop"> Hi, I'm Alana!</h2>
                 <ul>
-                  <li><h3 class="h-three-desktop"> A Product Designer</h3></li>
-                  <li><h3 class="h-three-desktop">based in San Francisco.</h3></li>
+                  <li><h3 class="h-three-desktop-one h-three-desktop-two"> A Product Designer</h3></li>
+                  <li><h3 class="h-three-desktop-one h-three-desktop-two">based in San Francisco.</h3></li>
                 </ul>
                 <p class="font intro">Driven by research and human connection, I solve problems by addressing user needs and designing for a better future.</p>
               </div>
