--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 </script>
 </head>
   <body>
-    <nav class="nav-bar">
+    <nav>
       <div class="menu-wrap">
         <input type="checkbox" class="toggler">
         <div class="hamburger"><div></div></div>
@@ -28,7 +28,7 @@
               <ul>
                 <li><a href="index.html">Work</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="file:///Users/alanamacedo/my-portfolio/Alana-Macedo-Resume.pdf">Resume</a></li>
+                <li><a target="_blank" href="./Alana-Macedo-Resume.pdf#toolbar=0" onclick="open(this.href, this.target, 'width=600, height=450, top=200, left=250'); return false;">Resume</a></li>
               </ul>
             </div>
           </div>
@@ -38,7 +38,7 @@
         <ul>
           <li><a href="index.html">Work</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="resume.html">Resume</a></li>
+          <li><a href="file:///Users/alanamacedo/my-portfolio/Alana-Macedo-Resume.pdf">Resume</a></li>
         </ul>
       </div>
       <header>
