--- a/project.html
+++ b/project.html
@@ -19,7 +19,7 @@
 </head>
   <body>
     <div class="full-page-container">
-      <nav class="nav-bar">
+      <nav>
         <div class="menu-wrap">
           <input type="checkbox" class="toggler">
           <div class="hamburger"><div></div></div>
@@ -27,9 +27,9 @@
             <div>
               <div>
                 <ul>
-                  <li class="work-about-resume"><a href="index.html">Work</a></li>
-                  <li class="work-about-resume"><a href="about.html">About</a></li>
-                  <li class="work-about-resume"><a href="resume.html">Resume</a></li>
+                  <li><a href="index.html">Work</a></li>
+                  <li><a href="about.html">About</a></li>
+                  <li><a target="_blank" href="./Alana-Macedo-Resume.pdf#toolbar=0" onclick="open(this.href, this.target, 'width=600, height=450, top=200, left=250'); return false;">Resume</a></li>
                 </ul>
               </div>
             </div>
